Fix navigation scrolling behind content

--- a/src/Navigation.css
+++ b/src/Navigation.css
@@ -9,6 +9,7 @@
   justify-content: space-between;
   background-color: var(--midnight);
   height: 64px;
+  z-index: 999;
 }
 
 .Navigation__Title {
