--- a/src/Registration.css
+++ b/src/Registration.css
@@ -2,7 +2,7 @@
   padding: 80px 16px 0 16px;
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  min-height: calc(100vh - 64px);
 }
 
 .Registration__Title {
